# circleci-cabal

./: README.md  circleci-cabal.cabal
.circleci/: config.yml
src/exe/: Main.hs
src/lib/: Lib.hs
src/test/: UnitTests.hs
